# xiaohei-worker

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile
.github/workflows/: cpplint.yml
cmd/worker/: CMakeLists.txt  config.ini  main.cc
examples/fetch/: fetch.js  manifest.json
examples/hello/: hello.js  manifest.json
examples/waituntil/: manifest.json  waituntil.js
examples/webstreams/: manifest.json  webstreams-node.js  webstreams.js
src/bindings/v8serviceworker/: CMakeLists.txt  base64.cc  serviceworker.cc  serviceworker.h  timer.cc  timer.h
src/bindings/v8serviceworker/base64/: base64.cc  base64.h
src/bindings/v8serviceworker/event/: event_listener.cc  event_listener.h  event_target.cc  event_target.h  fetch_event.cc  fetch_event.h
src/bindings/v8serviceworker/fetch/: fetch.cc  fetch.h  fetch_request.cc  fetch_request.h  fetch_response.cc  fetch_response.h
src/bindings/v8serviceworker/webstreams/: bytestream_controller.cc  bytestream_controller.h  queue_chunk.cc  queue_chunk.h  readablestream.cc  readablestream.h  readablestream_byob_reader.cc  readablestream_byob_reader.h  readablestream_controller.cc  readablestream_controller.h  readablestream_default_controller.cc  readablestream_default_controller.h  readablestream_default_reader.cc  readablestream_default_reader.h  readablestream_reader.h  strategy.cc  strategy.h  stream_promise.cc  stream_promise.h  underlying_source.cc  underlying_source.h  webstreams.cc  webstreams.h
src/core/: CMakeLists.txt  container.cc  container.h  main_context.cc  main_context.h  request_scope.cc  request_scope.h  worker.cc  worker.h
src/lib/common/: CMakeLists.txt  common.cc  common.h  heap.h  json.cc  json.h  version.h.in
src/lib/v8wrap/: CMakeLists.txt  isolate.cc  isolate.h  js_class.cc  js_class.h  js_object.cc  js_object.h  js_value.cc  js_value.h  v8wrap.cc  v8wrap.h
src/lib/webapi/: CMakeLists.txt  event_target.cc  event_target.h  fetch_event.cc  fetch_event.h  global_scope.cc  global_scope.h
src/lib/webapi/fetch/: fetch_event.cc  fetch_event.h  fetch_headers.h  fetch_request.cc  fetch_request.h  fetch_response.cc  fetch_response.h
src/lib/webapi/webstreams/: readable_stream.h
src/runtime/: CMakeLists.txt  conf.h.in  fetch_backend.cc  fetch_backend.h  runtime.cc  runtime.h
src/runtime/v8rt/: v8js_context.cc  v8js_context.h  v8js_fetch.cc  v8js_fetch.h  v8rt.cc  v8rt.h
